[package]
name = "music-practice-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

# CLI-specific dependencies
clap = { version = "3.0", features = ["derive"] }

# Web-specific dependencies
actix-web = "4.0"

[[bin]]
name = "music_practice_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "music_practice_web"
path = "src/bin/web.rs"
